--- a/github/modules/RepositoryDetail/RepositoryReadme/view/RepositoryReadmeViewController.xib
+++ b/github/modules/RepositoryDetail/RepositoryReadme/view/RepositoryReadmeViewController.xib
@@ -12,8 +12,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RepositoryReadmeViewController" customModule="github" customModuleProvider="target">
             <connections>
-                <outlet property="markdownView" destination="2VQ-z1-RGh" id="Bdm-nA-CJj"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="webView" destination="aok-h7-ZoJ" id="Tay-ZT-Mcf"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -21,17 +21,21 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2VQ-z1-RGh" customClass="MarkdownView" customModule="MarkdownView">
+                <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aok-h7-ZoJ">
                     <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </view>
+                    <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <wkWebViewConfiguration key="configuration">
+                        <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                        <wkPreferences key="preferences"/>
+                    </wkWebViewConfiguration>
+                </wkWebView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="2VQ-z1-RGh" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="amS-RX-bGi"/>
-                <constraint firstItem="2VQ-z1-RGh" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="jsd-Fd-llZ"/>
-                <constraint firstItem="2VQ-z1-RGh" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="lmM-o3-Dmk"/>
-                <constraint firstItem="2VQ-z1-RGh" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="qRV-wO-Rus"/>
+                <constraint firstItem="aok-h7-ZoJ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="AaW-UP-C1Y"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="aok-h7-ZoJ" secondAttribute="trailing" id="rZt-1T-09N"/>
+                <constraint firstAttribute="bottom" secondItem="aok-h7-ZoJ" secondAttribute="bottom" id="uaF-Ac-v3K"/>
+                <constraint firstItem="aok-h7-ZoJ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="wid-qs-mGm"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="140" y="154.27286356821591"/>
