--- a/github/modules/SearchResult/view/cell/RepositoryCell.xib
+++ b/github/modules/SearchResult/view/cell/RepositoryCell.xib
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="121" id="KGk-i7-Jjw" customClass="RepositoryCell" customModule="github" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="121"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="145" id="KGk-i7-Jjw" customClass="RepositoryCell" customModule="github" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="145"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="286" height="120.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="286" height="144.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="f4v-Ih-nEx">
-                        <rect key="frame" x="20" y="8" width="266" height="104.5"/>
+                        <rect key="frame" x="20" y="20" width="266" height="104.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Owner/RepositoryName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x7s-D5-mJ5">
                                 <rect key="frame" x="0.0" y="0.0" width="266" height="34"/>
@@ -69,8 +69,8 @@
                 <constraints>
                     <constraint firstItem="f4v-Ih-nEx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" symbolic="YES" id="JO6-aG-xSV"/>
                     <constraint firstAttribute="trailing" secondItem="f4v-Ih-nEx" secondAttribute="trailing" id="aUj-cq-clw"/>
-                    <constraint firstAttribute="bottom" secondItem="f4v-Ih-nEx" secondAttribute="bottom" constant="8" id="aiu-cA-YdR"/>
-                    <constraint firstItem="f4v-Ih-nEx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="oa4-ae-DJg"/>
+                    <constraint firstAttribute="bottom" secondItem="f4v-Ih-nEx" secondAttribute="bottom" constant="20" symbolic="YES" id="aiu-cA-YdR"/>
+                    <constraint firstItem="f4v-Ih-nEx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" symbolic="YES" id="oa4-ae-DJg"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -80,7 +80,7 @@
                 <outlet property="repositoryNameLabel" destination="x7s-D5-mJ5" id="xzt-LP-61A"/>
                 <outlet property="starCountLabel" destination="N1Z-xM-PN9" id="YM6-Mt-D9P"/>
             </connections>
-            <point key="canvasLocation" x="137.59999999999999" y="146.17691154422789"/>
+            <point key="canvasLocation" x="138" y="147"/>
         </tableViewCell>
     </objects>
     <resources>
