--- a/github/modules/SearchResult/view/cell/RepositoryCell.xib
+++ b/github/modules/SearchResult/view/cell/RepositoryCell.xib
@@ -12,39 +12,51 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="145" id="KGk-i7-Jjw" customClass="RepositoryCell" customModule="github" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="145"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="127" id="KGk-i7-Jjw" customClass="RepositoryCell" customModule="github" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="127"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="286" height="144.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="286" height="126.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="f4v-Ih-nEx">
-                        <rect key="frame" x="20" y="20" width="266" height="104.5"/>
+                        <rect key="frame" x="20" y="20" width="266" height="86.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Owner/RepositoryName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x7s-D5-mJ5">
-                                <rect key="frame" x="0.0" y="0.0" width="266" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="jgk-Ef-f7c">
+                                <rect key="frame" x="0.0" y="0.0" width="266" height="24"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SbG-Lc-hnQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="SbG-Lc-hnQ" secondAttribute="height" multiplier="1:1" id="6GQ-Vy-0sk"/>
+                                            <constraint firstAttribute="height" constant="24" id="X40-Ym-Trb"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RepositoryName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x7s-D5-mJ5">
+                                        <rect key="frame" x="32" y="0.0" width="234" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i8Y-nc-dyQ">
-                                <rect key="frame" x="0.0" y="42" width="266" height="23.5"/>
+                                <rect key="frame" x="0.0" y="32" width="266" height="20"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" restorationIdentifier="bottom stack view" distribution="fillEqually" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="GHe-7l-GrX">
-                                <rect key="frame" x="0.0" y="73.5" width="266" height="31"/>
+                                <rect key="frame" x="0.0" y="60" width="266" height="26.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="language label" text="Language" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lcv-XW-CR7">
-                                        <rect key="frame" x="0.0" y="5.5" width="129" height="19.5"/>
+                                        <rect key="frame" x="0.0" y="3.5" width="129" height="19.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" restorationIdentifier="star stack view" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="t3B-aJ-wvD">
-                                        <rect key="frame" x="137" y="3.5" width="129" height="24"/>
+                                        <rect key="frame" x="137" y="1.5" width="129" height="24"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="star image" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="jCb-ok-4WZ">
                                                 <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
@@ -77,10 +89,11 @@
             <connections>
                 <outlet property="descriptionLabel" destination="i8Y-nc-dyQ" id="8SX-yW-xAK"/>
                 <outlet property="languageLabel" destination="lcv-XW-CR7" id="lLd-0P-Vsh"/>
+                <outlet property="ownerImageView" destination="SbG-Lc-hnQ" id="R5t-xB-Ujn"/>
                 <outlet property="repositoryNameLabel" destination="x7s-D5-mJ5" id="xzt-LP-61A"/>
                 <outlet property="starCountLabel" destination="N1Z-xM-PN9" id="YM6-Mt-D9P"/>
             </connections>
-            <point key="canvasLocation" x="138" y="147"/>
+            <point key="canvasLocation" x="137.59999999999999" y="138.0809595202399"/>
         </tableViewCell>
     </objects>
     <resources>
