--- a/github/modules/SearchResult/view/cell/RepositoryCell.xib
+++ b/github/modules/SearchResult/view/cell/RepositoryCell.xib
@@ -19,10 +19,10 @@
                 <rect key="frame" x="0.0" y="0.0" width="286" height="151.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="f4v-Ih-nEx">
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="f4v-Ih-nEx">
                         <rect key="frame" x="20" y="20" width="266" height="111.5"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="jgk-Ef-f7c">
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="jgk-Ef-f7c">
                                 <rect key="frame" x="0.0" y="0.0" width="266" height="36"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SbG-Lc-hnQ">
@@ -33,30 +33,30 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RepositoryName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x7s-D5-mJ5">
-                                        <rect key="frame" x="44" y="0.0" width="222" height="36"/>
+                                        <rect key="frame" x="52" y="0.0" width="214" height="36"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i8Y-nc-dyQ">
-                                <rect key="frame" x="0.0" y="44" width="266" height="23"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i8Y-nc-dyQ">
+                                <rect key="frame" x="0.0" y="52" width="266" height="19.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" restorationIdentifier="bottom stack view" distribution="fillEqually" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="GHe-7l-GrX">
-                                <rect key="frame" x="0.0" y="75" width="266" height="36.5"/>
+                                <rect key="frame" x="0.0" y="87.5" width="266" height="24"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="language label" text="Language" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lcv-XW-CR7">
-                                        <rect key="frame" x="0.0" y="8.5" width="129" height="19.5"/>
+                                        <rect key="frame" x="0.0" y="2.5" width="129" height="19.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" restorationIdentifier="star stack view" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="t3B-aJ-wvD">
-                                        <rect key="frame" x="137" y="6" width="129" height="24"/>
+                                        <rect key="frame" x="137" y="0.0" width="129" height="24"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="star image" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="jCb-ok-4WZ">
                                                 <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
