--- a/github/modules/SearchOptions/view/SearchOptionsViewController.xib
+++ b/github/modules/SearchOptions/view/SearchOptionsViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchOptionsViewController" customModule="github" customModuleProvider="target">
             <connections>
+                <outlet property="searchBar" destination="Vl9-DX-TkO" id="xoD-b3-lFh"/>
                 <outlet property="view" destination="iN0-l3-epB" id="JRS-ZV-lhn"/>
             </connections>
         </placeholder>
@@ -19,7 +20,18 @@
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="Vl9-DX-TkO">
+                    <rect key="frame" x="0.0" y="20" width="375" height="56"/>
+                    <textInputTraits key="textInputTraits"/>
+                </searchBar>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="Vl9-DX-TkO" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="R5G-rn-QZo"/>
+                <constraint firstItem="Vl9-DX-TkO" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="SCj-iB-taf"/>
+                <constraint firstItem="Vl9-DX-TkO" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="sGM-sA-3vt"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
         </view>
     </objects>
