--- a/github/modules/SearchOptions/view/SearchOptionsViewController.xib
+++ b/github/modules/SearchOptions/view/SearchOptionsViewController.xib
@@ -21,8 +21,8 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="Vl9-DX-TkO">
-                    <rect key="frame" x="0.0" y="20" width="375" height="56"/>
+                <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="Vl9-DX-TkO">
+                    <rect key="frame" x="0.0" y="28" width="375" height="56"/>
                     <textInputTraits key="textInputTraits"/>
                 </searchBar>
             </subviews>
@@ -30,7 +30,7 @@
             <constraints>
                 <constraint firstItem="Vl9-DX-TkO" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="R5G-rn-QZo"/>
                 <constraint firstItem="Vl9-DX-TkO" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="SCj-iB-taf"/>
-                <constraint firstItem="Vl9-DX-TkO" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="sGM-sA-3vt"/>
+                <constraint firstItem="Vl9-DX-TkO" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" id="sGM-sA-3vt"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
         </view>
