--- a/github/modules/SearchResult/view/SearchResultViewController.xib
+++ b/github/modules/SearchResult/view/SearchResultViewController.xib
@@ -22,13 +22,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="L91-ag-Qb9">
-                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="577"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="L91-ag-Qb9" secondAttribute="bottom" id="hEq-ys-91N"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="L91-ag-Qb9" secondAttribute="bottom" constant="70" id="hEq-ys-91N"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="L91-ag-Qb9" secondAttribute="trailing" id="v2O-Jq-3RU"/>
                 <constraint firstItem="L91-ag-Qb9" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="vJc-By-sN3"/>
                 <constraint firstItem="L91-ag-Qb9" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="yjj-n5-JTp"/>
